--- a/src/view/AnalysisPage.css
+++ b/src/view/AnalysisPage.css
@@ -14,6 +14,10 @@
   justify-content: center;
   z-index: 0;
 }
+.donutWrapper {
+  width: 410px;
+  height: 410px;
+}
 
 @media (max-width: 768px) {
   .analysisInfo {
@@ -24,17 +28,21 @@
     align-items: center;
     width: 100%;
     padding: 0;
+    place-items: center;
+  }
+
+  .donutWrapper {
+    width: 280px;
+    height: 280px;
   }
 
   .analysisPage {
-    width: 100%;
-
     padding: 0;
     margin-left: 0;
   }
 
   .spotlightCard {
-    width: 100% !important;
+    width: calc(100% - 80px) !important;
     max-width: none !important;
   }
 }
