--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -13,6 +13,10 @@
   transition: transform 0.2s ease;
 }
 
+.sign-in-title:hover {
+  transform: translate(-50%, -50%) scale(2.2);
+}
+
 .sign-in-text {
   position: absolute;
   top: 18%;
@@ -34,7 +38,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  background-color: rgba(255, 255, 255, 0.8);
+  /* From https://css.glass */
+  background: rgba(181, 204, 235, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+  border: 2px solid rgba(31, 38, 145, 0.3);
   padding: 2rem;
   border-radius: 1rem;
   width: 90%;
@@ -47,9 +56,12 @@
   width: 100%;
   font-size: 1.4rem;
   margin-bottom: 1rem;
-  border: 1px solid #aaa;
-  background-color: rgb(255, 255, 255);
-  width: 90%;
+  /* From https://css.glass */
+  background: rgba(85, 53, 162, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(1px);
+  border: 2px solid rgba(31, 38, 145, 0.3);
   width: 400px;
   border-radius: 1rem;
   transition: transform 0.2s ease, scale 0.2s ease, width 0.2s ease;
@@ -57,16 +69,25 @@
 
 .sign-in-buttons button {
   font-size: 1.1rem;
-  background-color: #471a58;
-  color: white;
+  /* From https://css.glass */
+  background: rgba(143, 32, 115, 0.625);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(1px);
+  border: 1px solid rgba(97, 24, 71, 0.673);
+  color: rgba(81, 12, 63, 0.608);
   padding: 0.6rem 1.2rem;
-  border: none;
   border-radius: 1rem;
   white-space: nowrap;
-
+  transition: transform 0.3s ease;
+  transform: scale(1);
   display: inline-block;
   width: auto;
   height: auto;
+}
+
+.sign-in-buttons button:hover {
+  transform: scale(1.1);
 }
 
 .sign-in-buttons {
@@ -87,7 +108,7 @@
   text-shadow: 0 4px 12px rgba(71, 26, 88, 0.4);
   z-index: 999;
   padding: 1rem;
-  background: #f0e3ec;
+  background: #e3eff0;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(187, 0, 255, 0.4);
   z-index: 999;
@@ -132,6 +153,9 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1.8);
   }
+  .sign-in-title:hover {
+    transform: translate(-50%, -50%) scale(2);
+  }
 }
 
 @media (max-width: 400px) {
@@ -153,6 +177,9 @@
     top: 25%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1.5);
+  }
+  .sign-in-title:hover {
+    transform: translate(-50%, -50%) scale(1.7);
   }
 }
 
