--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -139,10 +139,10 @@
   }
   .headerRight {
     display: grid;
+    padding: 0;
     gap: 0rem;
-    margin-top: 10px;
     position: absolute;
-    left: 90%;
+    left: 88%;
     transform: translateX(-50%);
   }
 }
