--- a/src/components/Logout/Logout.css
+++ b/src/components/Logout/Logout.css
@@ -22,3 +22,15 @@
   transform: translateY(-4px);
   transform: scale(1);
 }
+
+@media (max-width: 768px) {
+  .Logout {
+    transform: scale(0.8);
+  }
+}
+
+@media (max-width: 425px) {
+  .Logout {
+    transform: scale(0.7);
+  }
+}
